# drone-interception

./: .gitignore  .gitmodules  AGENTS.md  SIM.md  __init__.py
backends/: __init__.py  generator.py  input.py  puffer_c.py  rotorpy.py
config/: intercept.ini
control_sims/: __init__.py  benchmark_uniform_distance.py  common.py  logging.py  miss_pattern_report.py  plot_uniform_distance_benchmark.py  runner.py  sim_runner.py  terminal_capture_report.py
detection/: README.md
docs/: SHARED_MIGRATION.md  diagram_types.md  generators.md  procurement.txt  sampling.md  sampling_coordinate_systems.html  todo.md  worklog.md
intercept_env/: binding.c  drone.h  dronelib.h  sim_core.c  sim_core.h  tasks.h
papers/: 2404.08296.txt  beihang.txt  diffsim_quadrotor_heeg_2025.txt  gavin_thales_2026.txt  swift_kaufmann_2023.txt
rendering/: README.md
rendering/native/: CMakeLists.txt
rendering/native/platform/: README.md  render_platform.h
rendering/native/platform/linux/: render_platform_linux.cpp
rendering/native/platform/win32/: render_platform_win32.cpp
rendering/native/src/: render_engine.cpp
rl/: README.md
scripts/: analyze_current_path_captures.py  probe_liftoff_variant_yolo.py  remote_bootstrap.sh  runpod_setup.sh  runpod_teardown.sh  sync_back.sh  upload.sh
tests/: test_control_sim_logging.py  test_intercept_benchmark_modes.py  test_neural_sim_control_policy.py  test_optimizing_rpg_rollout.py  test_puffer_backend_smoke.py  test_puffer_intercept_train.py  test_puffer_ppo_diagnostics.py  test_rl_report.py  test_robust_intercept_generator.py  (+8 more)
(+454 files in other folders)
